Frontend/bio-secure-frontend/src/style.css
@import "tailwindcss";

@theme {
    --color-mainblue: #547792;
}

