Fixed the main page overflow

--- a/Frontend/bio-secure-frontend/src/style.css
+++ b/Frontend/bio-secure-frontend/src/style.css
@@ -3,3 +3,9 @@
 @theme {
     --color-mainblue: #547792;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* prevent any horizontal scroll */
+}
